# JKearnsl

./: .gitignore  CNAME  Cargo.toml  ENV.md  README.md  index.html
assets/css/: sakura.css
css/: style.css
src/: config.rs  ioc.rs  main.rs
src/adapters/: argon2_password_hasher.rs  mod.rs
src/adapters/auth/: token.rs
src/adapters/database/: initial.rs  mod.rs  note_db.rs  pool.rs  project_db.rs
src/adapters/database/models/: mod.rs  notes.rs  projects.rs
src/application/: create_session.rs  get_user_self.rs  mod.rs
src/application/common/: exceptions.rs  hasher.rs  id_provider.rs  interactor.rs  mod.rs  note_gateway.rs  project_gateway.rs  user_gateway.rs
src/application/note/: create.rs  get_by_id.rs  get_by_slug.rs  mod.rs
src/application/session/: create.rs
src/application/user/: create.rs  get_self.rs  list.rs  mod.rs
src/domain/: exceptions.rs  id_generator.rs  mod.rs
src/domain/models/: hash.rs  mod.rs  note.rs  project.rs  user.rs
src/domain/services/: mod.rs  note.rs  project.rs  validator.rs
src/presentation/: id_provider.rs  interactor_factory.rs  mod.rs
src/presentation/pages/: mod.rs
src/presentation/rest/: exception.rs  mod.rs  session.rs  user.rs
