[package]
name = "JKearnsl"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {  version = "^4.9", features = ["rustls-0_23"] }
actix-files = "^0.6"
leptos = "^0.6"
rustls = "^0.23"
rustls-pemfile = "^2.1"
log = "^0.4"
pretty_env_logger = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.40", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }
async-trait = "^0.1"
derive_more = { version = "^1.0", features = ["display", "error"] }


# Database
sqlx = { version = "^0.8", features = [
    "runtime-tokio",
    "sqlite",
    "sqlx-sqlite",
    "chrono"
] }

# Etc
rand = "^0.8"
nanoid = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
argon2 = "^0.5"
