[package]
name = "jkearnsl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# Frontend
leptos = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# Backend
actix-web = {  version = "4.9", features = ["rustls-0_23", "macros"], optional = true }
leptos_actix = { version = "0.7",  optional = true}
actix-files = { version = "0.6", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
chrono = { version = "0.4", features = ["serde", "wasmbind"], optional = true }
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
derive_more = { version = "1.0", features = ["display", "error"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.43", features = [
    "rt",
    "rt-multi-thread",
    "macros"
], optional = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "sqlx-sqlite",
    "chrono"
], optional = true }

# Etc
argon2 = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
nanoid = { version = "0.4", optional = true }
cfg-if = "1"
anyhow = "1.0.89"
thiserror = "1.0.64"

[features]
hydrate = ["leptos/hydrate", "chrono/wasmbind"]
ssr = [
    "dep:leptos_actix",
    "dep:chrono",
    "dep:actix-web",
    "dep:actix-files",
    "dep:async-trait",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:log",
    "dep:pretty_env_logger",
    "dep:tokio",
    "dep:sqlx",
    "dep:argon2",
    "dep:serde",
    "dep:serde_json",
    "dep:derive_more",
    "dep:rand",
    "dep:nanoid",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[package.metadata.leptos]
output-name = "jkearnsl"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
reload-port = 3001

browserquery = "defaults"
env = "PROD"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
